--- a/CSS/vCss.css
+++ b/CSS/vCss.css
@@ -48,7 +48,7 @@ hr {
     right: 20%;
     width: 60%;
     height: 50%;
-    bottom: 8%; 
+    bottom: 35px; 
 }
 .circular {
     border-radius: 150%;
